--- a/rollup/core/classes/RollupEvaluator.cls
+++ b/rollup/core/classes/RollupEvaluator.cls
@@ -487,7 +487,8 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
       SObject item = (SObject) o;
       Boolean isEqual = true;
 
-      String storedValue = String.valueOf(this.getFieldValue(item, this.fieldName, this.sObjectType));
+      Object originalValue = this.getFieldValue(item, this.fieldName, this.sObjectType);
+      String storedValue = String.valueOf(originalValue);
       // special case for currency/multi-decimal situations where zero is being compared to
       // but the comparison value has no decimals
       if (storedValue?.replace('.', '')?.containsOnly('0') == true && this.values.contains('0')) {
@@ -518,24 +519,16 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
         }
         // then there's this whole paradigm; it really shouldn't be possible to have multiple values for either
         // greater than / less than routes, but we test for it first just to be triple-sure
-        when '>', '>=' {
+        when '>', '>=', '<', '<=' {
           if (this.values.size() != 1) {
             throw new IllegalArgumentException('Comparison not valid with multiple arguments: ' + JSON.serialize(this.values));
           } else if (storedValue == null) {
             isEqual = false;
           } else {
-            isEqual = this.criteria.endsWith('=') ? storedValue >= this.values[0] : storedValue > this.values[0];
+            isEqual = this.getGreaterOrLessThan(this.values[0], originalValue);
           }
         }
-        when '<', '<=' {
-          if (this.values.size() != 1) {
-            throw new IllegalArgumentException('Comparison not valid with multiple arguments: ' + JSON.serialize(this.values));
-          } else if (storedValue == null) {
-            isEqual = false;
-          } else {
-            isEqual = this.criteria.endsWith('=') ? storedValue <= this.values[0] : storedValue < this.values[0];
-          }
-        }
+
         when 'includes', '!includes' {
           isEqual = false;
           for (String value : this.values) {
@@ -600,6 +593,47 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
         return this.getFieldValue(parentSObject, String.join(fieldNameParts, '.'), parentSObjectType);
       } else {
         return parentSObject.get(originalName);
+      }
+    }
+
+    private Boolean getGreaterOrLessThan(Object comparisonValue, Object storedValue) {
+      // storedValue is still strongly typed, so it just needs to be cast to the appropriate type
+      // find me a language where equality operations are strongly typed so that we can avoid the
+      // conditionals below!
+      Boolean isLessThan = this.criteria.startsWith('<');
+      Boolean isEqualTo = this.criteria.endsWith('=');
+      String comparisonText = String.valueOf(comparisonValue);
+
+      // covers Time / Date / Datetime
+      if (storedValue instanceof Datetime) {
+        Datetime comparisonDate = Datetime.valueOfGmt(comparisonText);
+        Datetime storedDate = (Datetime) storedValue;
+
+        if (isLessThan) {
+          return isEqualTo ? storedDate <= comparisonDate : storedDate < comparisonDate;
+        } else {
+          return isEqualTo ? storedDate >= comparisonDate : storedDate > comparisonDate;
+        }
+      }
+      // covers Double / Integer / Decimal / Long
+      else if (storedValue instanceof Decimal) {
+        Decimal comparisonDecimal = Decimal.valueOf(comparisonText);
+        Decimal storedDecimal = (Decimal) storedValue;
+
+        if (isLessThan) {
+          return isEqualTo ? storedDecimal <= comparisonDecimal : storedDecimal < comparisonDecimal;
+        } else {
+          return isEqualTo ? storedDecimal >= comparisonDecimal : storedDecimal > comparisonDecimal;
+        }
+      }
+      // covers pretty much anything else
+      else {
+        String storedText = String.valueOf(storedValue);
+        if (isLessThan) {
+          return isEqualTo ? storedText <= comparisonText : storedText < comparisonText;
+        } else {
+          return isEqualTo ? storedText >= comparisonText : storedText > comparisonText;
+        }
       }
     }
   }
